--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,14 @@
-[submodule "external/lvgl"]
-	path = external/lvgl
-	url = https://github.com/littlevgl/pc_simulator_sdl_eclipse.git
 [submodule "external/vlc/libvlcpp"]
 	path = external/vlc/libvlcpp
 	url = https://github.com/videolan/libvlcpp.git
 [submodule "external/vlc/vlc"]
 	path = external/vlc/vlc
 	url = https://github.com/videolan/vlc-3.0.git
+[submodule "external/lvgl"]
+	path = external/lvgl/lvgl
+	url = https://github.com/lvgl/lvgl.git
+	branch = release/v7
+[submodule "external/lv_drivers"]
+	path = external/lvgl/lv_drivers
+	url = https://github.com/lvgl/lv_drivers.git
+	branch = release/v7
