--- a/.gitmodules
+++ b/.gitmodules
@@ -4,11 +4,9 @@
 [submodule "external/vlc/vlc"]
 	path = external/vlc/vlc
 	url = https://github.com/videolan/vlc-3.0.git
-[submodule "external/lvgl"]
+[submodule "external/lvgl/lvgl"]
 	path = external/lvgl/lvgl
-	url = https://github.com/lvgl/lvgl.git
-	branch = release/v7
-[submodule "external/lv_drivers"]
+	url = https://github.com/The-personified-devil/lvgl
+[submodule "external/lvgl/lv_drivers"]
 	path = external/lvgl/lv_drivers
-	url = https://github.com/lvgl/lv_drivers.git
-	branch = release/v7
+	url = https://github.com/The-personified-devil/lv_drivers
